<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startReading"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:text="@string/start_reading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.446"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
               android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/sGraph"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:text="@string/show_graph"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/startReading"
                    tools:ignore="NotSibling" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/sGraph"
                    android:text="@string/x_axis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.589"
                    app:layout_constraintStart_toEndOf="@+id/sGraph"
                    app:layout_constraintTop_toBottomOf="@+id/startReading"
                    tools:ignore="NotSibling" />

            </RelativeLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startReading" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/absoluteMagnitude"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:background="@drawable/border"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/absolute_magnitude" />

                <Button
                    android:id="@+id/powerSpectrum"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="107dp"
                    android:layout_toEndOf="@+id/absoluteMagnitude"
                    android:background="@drawable/border"
                    android:text="@string/power_spectrum" />
            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>